@@ -7,188 +7,7 @@
       metal:use-macro="here/prefs_main_template/macros/master"
       i18n:domain="ftw.upgrade">
 
-    <div metal:fill-slot="prefs_configlet_main"
-         tal:define="plone_needs_upgrading view/plone_needs_upgrading">
-
-        <script language="javascript" type="text/javascript"
-                tal:attributes="src string:${portal_url}/++resource++ftw.upgrade/manage.js">
-        </script>
-        <link rel="stylesheet" type="text/css" media="screen"
-              tal:attributes="href string:${portal_url}/++resource++ftw.upgrade/manage.css" />
-
-
-
-        <h1 class="documentFirstHeading"
-            i18n:translate="title_manage_upgrades">Upgrades</h1>
-
-        <a href=""
-           class="link-parent"
-           tal:attributes="href string:$portal_url/@@overview-controlpanel"
-           i18n:translate="label_up_to_plone_setup"
-           i18n:domain="plone">
-            Up to Site Setup
-        </a>
-
-        <p i18n:translate="description_manage_upgrades"
-           class="discreet">
-            This view lists all profiles with at least one upgrade.
-            Profiles which are not yet installed are not listed.
-            Upgrades which are already installed are hidden by default,
-            click on the profile title to show them.
-        </p>
-
-        <tal:PLONE_NEEDS_UPGRADE
-            tal:condition="plone_needs_upgrading">
-            <dl class="portalMessage warning">
-                <dt i18n:translate="">Upgrade Plone</dt>
-                <dd i18n:translate="">
-                    The site configuration is outdated and needs to be
-                    upgraded!
-                    Upgrading add-ons is disabled while plone is outdated.
-                    <br />
-                    <a tal:attributes="href string:$portal_url/@@plone-upgrade"
-                       i18n:name="continue_upgrade_link"
-                       i18n:translate="continue_upgrade_link">
-                        Please continue with the upgrade.
-                    </a>
-                </dd>
-            </dl>
-        </tal:PLONE_NEEDS_UPGRADE>
-
-        <form
-            tal:condition="not:plone_needs_upgrading"
-            tal:attributes="action string:${context/absolute_url}/@@manage-upgrades?ajax=1"
-            tal:define="profiles view/get_data;
-                        cyclic_dependencies view/cyclic_dependencies"
-            method="post"
-            target="upgrade-output"
-            id="upgrade-form">
-
-            <tal:CYCLIC
-                tal:condition="cyclic_dependencies">
-                <dl class="portalMessage warning">
-                    <dt i18n:translate="">Cyclic dependencies</dt>
-                    <dd i18n:translate="">
-                        There are cyclic dependencies.
-                        The profiles could not be sorted by dependencies!
-                    </dd>
-                </dl>
-
-                <h2 i18n:translate="">Profiles with cyclic dependencies:</h2>
-                <ul class="cyclic-dependencies">
-                    <li tal:repeat="group cyclic_dependencies">
-                        <tal:PROFILE tal:repeat="profile group">
-                            <span tal:condition="not:repeat/profile/start"
-                                  tal:omit-tag="python:1">
-                                ;
-                            </span>
-                            <span tal:replace="profile" />
-                        </tal:PROFILE>
-                    </li>
-                </ul>
-
-            </tal:CYCLIC>
-
-            <div class="selection-control" tal:condition="not:cyclic_dependencies">
-                <span>
-                    <a href="#"
-                       class="select-none"
-                       i18n:translate="">Select none</a>
-                </span>
-                <span>
-                    <a href="#"
-                       class="select-not-installed"
-                       i18n:translate="">Select not installed</a>
-                </span>
-            </div>
-
-
-            <div class="profiles" tal:condition="not:cyclic_dependencies">
-                <div class="profile hide-done"
-                     tal:repeat="profile profiles">
-
-                    <input type="hidden"
-                           name="upgrade.profileid:records"
-                           tal:attributes="value profile/id" />
-
-                    <div tal:define="classes string:profile-title;
-                                     classes python: profile.get('outdated_fs_version') and '%s outdated-fs-version' % classes or classes"
-                         tal:attributes="class classes">
-                        <strong tal:content="profile/id" />
-
-                        <img tal:condition="profile/outdated_fs_version|nothing"
-                             tal:attributes="src string:$portal_url/++resource++ftw.upgrade/upgrade-outdated-fs-version.png"
-                             title="This profile's filesystem version is lower than one of the upgrades' target version. Please update the corresponding metadata.xml!"
-                             i18n:attributes="title" />
-
-                        <span i18n:translate="label_installed_version" class="profile-version discreet">
-                            Filesystem: <span class="fs-version" i18n:name="fs_version" tal:content="profile/version" />,
-                            Database: <span class="db-version" i18n:name="db_version" tal:content="profile/db_version" />
-                        </span>
-
-                    </div>
-
-                    <tal:UPGRADES tal:repeat="upgrade profile/upgrades">
-                        <div tal:define="boxid string:${profile/id}-${upgrade/id};
-                                         classes string:upgrade;
-                                         classes python: upgrade.get('done') and '%s done' % classes or classes;
-                                         classes python: upgrade.get('proposed') and '%s proposed' % classes or classes;
-                                         classes python: upgrade.get('outdated_fs_version') and '%s outdated-fs-version' % classes or classes"
-                             tal:attributes="class classes">
-
-                            <span class="upgrade-checkbox">
-                                <input type="checkbox"
-                                       tal:attributes="id boxid;
-                                                       checked python:upgrade.get('proposed') and 'checked';
-                                                       name string:upgrade.${upgrade/id}:records" />
-
-                                <img tal:condition="upgrade/proposed|nothing"
-                                     tal:attributes="src string:$portal_url/++resource++ftw.upgrade/upgrade-proposed.png"
-                                     title="This upgrade is not installed yet."
-                                     i18n:attributes="title" />
-
-                                <img tal:condition="upgrade/done|nothing"
-                                     tal:attributes="src string:$portal_url/++resource++ftw.upgrade/upgrade-installed.png"
-                                     title="This upgrade is already installed."
-                                     i18n:attributes="title" />
-
-                                <img tal:condition="python: not upgrade['done'] and not upgrade['proposed']"
-                                     tal:attributes="src string:$portal_url/++resource++ftw.upgrade/upgrade-error.png"
-                                     title="Something is wrong with this Upgrade step. This upgrade steps seems not to be installed but is not proposed. The target version may be newer than the filesystem profile version."
-                                     i18n:attributes="title" />
-
-                                <img tal:condition="upgrade/outdated_fs_version|nothing"
-                                     tal:attributes="src string:$portal_url/++resource++ftw.upgrade/upgrade-outdated-fs-version.png"
-                                     title="This upgrade's target version is higher than the profile's filesystem version. Please update the corresponding metadata.xml!"
-                                     i18n:attributes="title" />
-                            </span>
-
-                            <span class="upgrade-version">
-                                <span class="source-version" tal:content="upgrade/ssource" />
-                                &rarr;
-                                <span class="dest-version" tal:content="upgrade/sdest" />
-                            </span>
-
-                            <span class="upgrade-title"
-                                  tal:content="upgrade/title" />
-
-                            <div class="visualClear"><!-- --></div>
-
-                        </div>
-                    </tal:UPGRADES>
-
-                </div>
-            </div>
-
-            <input type="submit" name="submitted" value="Install"
-                   i18n:attributes="value"
-                   tal:condition="not:cyclic_dependencies" />
-
-        </form>
-
-        <iframe name="upgrade-output" id="upgrade-output"></iframe>
-        <input type="button" id="back-to-upgrades"
-               value="Back" i18n:attributes="value" />
-
+    <div metal:fill-slot="prefs_configlet_main">
+      <metal:macro use-macro="context/@@manage-upgrades-plain/upgrades" />
     </div>
 </html>
